--- a/app/views/client.html
+++ b/app/views/client.html
@@ -1,14 +1,15 @@
 <div class="row">
-    <h1>Deluge</h1>
+    <h1>Download list</h1>
 </div>
 
 <div class="row">
     <form>
         <div class="form-group">
-            <!-- <input type="text" class="form-control" id="search-term" ng-model="searchTerm" ng-change="updatelist()" placeholder="Search..."> -->
-            <button class="btn btn-primary" ng-click="getClientTorrents()">Update</button>
+            <input type="text" class="form-control" id="search-term" ng-model="search.name" placeholder="Search...">
         </div>
     </form>
+
+    <button class="btn btn-primary" ng-click="getClientTorrents()">Refresh</button>
 
     <table class="table table-striped table-hover">
         <thead>
@@ -24,7 +25,7 @@
             </tr>
         </thead>
         <tbody>
-            <tr class="" ng-repeat="torrent in torrents">
+            <tr class="" ng-repeat="torrent in torrents | filter:search:strict">
                 <td class="col-xs-5">{{torrent.name}}</td>
                 <td class="col-xs-1">{{torrent.state}}</td>
                 <td class="col-xs-1">{{torrent.download_payload_rate | bytes : 1 : true}}</td>
