Add state filtering

--- a/app/views/client.html
+++ b/app/views/client.html
@@ -1,15 +1,23 @@
 <div class="row">
-    <h1>Download list</h1>
-</div>
 
-<div class="row">
+    <h1>Download list</h1>
+
     <form>
-        <div class="form-group">
-            <input type="text" class="form-control" id="search-term" ng-model="search.name" placeholder="Search...">
+        <div class="form-group col-xs-12 col-md-8">
+            <input type="text" class="form-control" id="search-term" ng-model="search.name" placeholder="Filter...">
+        </div>
+        <div class="form-group col-xs-12 col-md-3">
+            <select class="form-control" ng-model="search.state">
+                <option value="">All</option>
+                <option value="Downloading">Downloading</option>
+                <option value="Queued">Queued</option>
+                <option value="Paused">Paused</option>
+            </select>
+        </div>
+        <div class="form-group col-xs-12 col-md-1">
+            <button class="btn btn-primary" ng-click="getClientTorrents()">Refresh</button>
         </div>
     </form>
-
-    <button class="btn btn-primary" ng-click="getClientTorrents()">Refresh</button>
 
     <table class="table table-striped table-hover">
         <thead>
