--- a/app/views/client.html
+++ b/app/views/client.html
@@ -20,15 +20,15 @@
     <table class="table table-striped table-hover">
         <thead>
             <tr>
-                <th>Name</th>
-                <th>State</th>
-                <th>Speed</th>
-                <th>Progress</th>
-                <th>ETA</th>
-                <th>Downloaded</th>
-                <th>Total</th>
-                <th>Seeders</th>
-                <th>Peers</th>
+                <th><a ng-click="order('name')">Name</a></th>
+                <th><a ng-click="order('state')">State</a></th>
+                <th><a ng-click="order('speed')">Speed</a></th>
+                <th><a ng-click="order('progress')">Progress</a></th>
+                <th><a ng-click="order('eta')">ETA</a></th>
+                <th><a ng-click="order('total_done')">Downloaded</a></th>
+                <th><a ng-click="order('total_size')">Total</a></th>
+                <th><a ng-click="order('total_seeds')">Seeders</a></th>
+                <th><a ng-click="order('total_peers')">Peers</a></th>
             </tr>
         </thead>
         <tbody>
